--- a/final_project/final_project.Rmd
+++ b/final_project/final_project.Rmd
@@ -28,7 +28,7 @@ knitr::opts_chunk$set(echo = TRUE)
 Heart Disease is a major problem people across the world, whether it be from minor heart problems all the way to life threatening heart conditions. Many heart diseases can be congenital, but many are also brought on by our lifestyle, such as eating habits. Cholesterol, is a substance found in nearly every cell of our body, but also found in many foods we ingest like meat and dairy products. Our body needs cholesterol in order to function correctly, but as saying goes "too much of something, is sometimes not good for you!" Too much cholesterol, or high cholesterol can lead individuals to have a higher risk of heart disease in the arteries. In this study, we will be using the UCI Heart Disease Dataset in order to determine whether patients suffering from heart disease due to the narrowing of the diameter of the arteries is associated with high cholesterol. 
 
 ## Data Set Information
-The data set in this study comes from the UCI Heart Disese Dataset, which contains samples from three specific areas around the world: Cleveland, Ohio in the USA, Long Beach, California in the USA, Zurich and Basel in Switzerland and finally Budapest, Hungary. Note that while Switzerland is processed in this analysis, it is essentially removed from the merged dataset as they did not have any cholesterol records in their dataset. This data set, contains 14 different attributes, of which information is provided about each column below:<br /> 
+The data set in this study comes from the UCI Heart Disease Dataset, which contains samples from three specific areas around the world: Cleveland, Ohio in the USA, Long Beach, California in the USA, Zurich and Basel in Switzerland and finally Budapest, Hungary. Note that while the Switzerland dataset is processed in this analysis, it is essentially removed from the merged dataset as they did not have any cholesterol records in their dataset. This data set contains 14 different attributes, of which information is provided about each column below:<br /> 
     **age:** Age in years<br /> 
     **sex:** (1 = male; 0 = female)<br /> 
     **cp:** Chest pain type (0 = asymptomatic; 1 = atypical angina; 2 = non-anginal pain; 3 = typical angina) <br />
@@ -57,7 +57,7 @@ Our sub priorities in the study is to see whether: <br />
 
 
 # Methods
-I downloaded the processed dataset for each location from the [UCI Heart Disease database](https://archive.ics.uci.edu/ml/datasets/heart+Disease). From here, I took the data from each location, appended a location column to identify the location for each sample, and then merged the datasets into one data frame. Once merged, I imputed the missing data values using the Amelia library. After data imputation, I removed data that did not follow the angiographic disease status format described in their metadata document, and created a categorical variable for Cholesterol Levels following the [U.S. Department of ehalth and Human Services guidelines ](https://integrisok.com/resources/on-your-health/2019/september/a-guide-to-healthy-cholesterol), in which they state that total cholesterol levels below 200 (mg/dl), bewteen 200 to 239 (mg/dl) is borderline high, and 240 (mg/dl) or higher is deemed as having high cholesterol levels. After cleaning data, I followed the Exploratory Data Analysis (EDA) protocol to extract key variables and visualize the data to address the questions for the study. 
+I downloaded the processed datasets for each location from the [UCI Heart Disease database](https://archive.ics.uci.edu/ml/datasets/heart+Disease). From here, I took the data from each location, appended a location column to identify the location for each sample, and then merged the datasets into one data frame. Once merged, I imputed the missing data values using the Amelia library. After data imputation, I removed data that did not follow the angiographic disease status format described in their metadata document, and created a categorical variable for Cholesterol Levels following the [U.S. Department of ehalth and Human Services guidelines ](https://integrisok.com/resources/on-your-health/2019/september/a-guide-to-healthy-cholesterol), in which they state that total cholesterol levels below 200 (mg/dl), between 200 to 239 (mg/dl) is borderline high, and 240 (mg/dl) or higher is deemed as having high cholesterol levels. After cleaning data, I followed the Exploratory Data Analysis (EDA) protocol to extract key variables and visualize the data to address the questions for the study. 
 
 # Analysis 
 
@@ -315,7 +315,7 @@ data_norm[!is.na(location) & !is.na(cholserum)] %>%
   scale_fill_brewer(palette = "Spectral")
 ```
  <br />
-The graph above depicts a bar chart of Normalized Cholesterol (mg/dl) by Location, with the x-axis being the Location from which the samples were obtained from and the y-axis being the the normalized cholesterol levels. From the graph, we can see that the median normalized cholesterol for Hungary and Cleveland are quite similar, while the Long Beach dataset seems to have a much lower median than the rest. Moreover, it seems that the distributions of Cleveland and Long Beach are quite similar, while Hungary seems to have a slightly larger distribution. 
+The graph above depicts a boxplot of Normalized Cholesterol (mg/dl) by Location, with the x-axis being the Location from which the samples were obtained from and the y-axis being the the normalized cholesterol levels. From the graph, we can see that the median normalized cholesterol for Hungary and Cleveland are quite similar, while the Long Beach dataset seems to have a much lower median than the rest. Moreover, it seems that the distributions of Cleveland and Long Beach are quite similar, while Hungary seems to have a slightly larger distribution. 
 
 
 ```{r include=FALSE}
